Fixed MANIFEST and setup.py so PyPI upload works

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -6,9 +6,11 @@ include docs/*.py
 include docs/Makefile
 include docs/*.txt
 include tests/*
-include phydmslib/*.pyx
-include phydmslib/*/README.rst
+recursive-include phydmslib *.rst *.pyx *.h
 
 global-exclude *.so
 global-exclude *.pyc
 global-exclude .git*
+global-exclude ._*
+global-exclude slurm-*
+global-exclude *.sbatch
