Squashed 'phydmslib/Bpp/bpp-core/' changes from b59b874..470afc0
470afc0 better Application String mgmt
1aa9d19 mgmt of inf in vector sums
89275a5 Merge branch 'master' of biopp.univ-montp2.fr:/git/bpp-core
3bbfdc1 operator&=(vector, double)  for '=' usage
c469fb3 Graph: Added getNodes(edge)
a93a79b better alias output
336b8a3 compilation .cpp -> .h
6aa2c32 Merge branch 'master' of biopp.univ-montp2.fr:/git/bpp-core
5c0f352 mode functions in VectorTools
d743dc3 Graph: —imported some function of former Phyl/TreeTools —in associators, renamed Id (Graph::Node) to Graphid (to avoid confusion with NodeIndex)
9770d25 Merge branch 'master' of biopp.univ-montp2.fr:/git/bpp-core
9802933 add computeLikelihood to logsumHMM
24448f5 Fixed unit test.
a56a998 Graph: mainly consted input N and E parameters in AssociationGraph methods
7cfc1f0 Graph: — corrected a shadow warning, — explicited forgetNode, — renamed newOutGroup to setOutGroup, — unconst’ed returned vectror.
8ed633b Graph: — Trees and test of trees are now fully functional — Const’ed a lot more methods
0b35026 Graph: ok for instanciation
3510ba7 Graph: Tests: order changed in newNode() args
aefa12a Graph: new classes names
2b91a4b Re/un-rooting methods
dbb0b6e Graphs: makeUndirected() and containsReciprocalRelation()
3a9e162 Graphs: — Const’ed a lot of methods — makeDirected
8c904f2 Changed undirected graphs storage in nodeStructure
d8958df Added re-rooting methods
d30fe67 Added TreeGraph draft
e68871d Renaming the classes: GraphWrapper -> GraphAssociator Implemented isTree method and dependancies
1ff5b5e Graph: Better Semantic
3934e37 Added index support New class hierarchy
d83c218 Changed graphes classes hierarchy
b987e1d Implemented all the methods required by the interface.
ab55528 Added ID accessors
8a3794b Graph Dot Output can be named
1db24d5 Dot output fully fonctionnal
ef004b9 Output to DOT
c315011 Anti-loop when converting to Dot
7475889 Removed unnecessary function
cb09b83 Implementing checkEdgeExistence
7527

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -20,6 +20,7 @@ SET(CPP_FILES
   Bpp/Text/TextTools.cpp
   Bpp/Graph/BasicONode.cpp
   Bpp/Graph/BasicTNode.cpp
+  Bpp/Graph/Graph.cpp
   Bpp/Graphics/ColorTools.cpp
   Bpp/Graphics/GraphicDevice.cpp
   Bpp/Graphics/Fig/XFigGraphicDevice.cpp
@@ -102,11 +103,16 @@ SET(H_FILES
   Bpp/App/ApplicationTools.h
   Bpp/App/BppApplication.h
   Bpp/App/NumCalcApplicationTools.h
+  Bpp/Graph/AssociationGraphObserver.h
+  Bpp/Graph/AssociationTreeGraphObserver.h
   Bpp/Graph/UNode.h
   Bpp/Graph/ONode.h
   Bpp/Graph/TNode.h
   Bpp/Graph/BasicONode.h
   Bpp/Graph/BasicTNode.h
+  Bpp/Graph/Graph.h
+  Bpp/Graph/TreeGraph.h
+  Bpp/Graph/GraphObserver.h  
   Bpp/Graphics/AbstractGraphicDevice.h
   Bpp/Graphics/ColorManager.h
   Bpp/Graphics/ColorSet.h
