Docs and tests for `phydms_logoplot`

--- a/tests/.gitignore
+++ b/tests/.gitignore
@@ -6,3 +6,4 @@ test_treelikelihood_image.pdf
 custom_matrix_frequencies.txt
 omegabysite_test_results
 diffprefsbysite_test_results
+logoplot_test_results
