--- a/pytest.ini
+++ b/pytest.ini
@@ -1,2 +1,4 @@
 [pytest]
 addopts = --ignore setup.py --doctest-modules
+# ignore script to create plot, requires `LaTeX`
+addopts = --ignore=docs/plot_diffprefs_prior.py
