--- a/pytest.ini
+++ b/pytest.ini
@@ -1,4 +1,3 @@
 [pytest]
-addopts = --ignore setup.py --doctest-modules
-# ignore script to create plot, requires `LaTeX`
-addopts = --ignore=docs/plot_diffprefs_prior.py
+addopts = --ignore setup.py --doctest-modules --ignore=docs/plot_diffprefs_prior.py
+# ignore script to create docs plot, requires `LaTeX`
