--- a/.travis.yml
+++ b/.travis.yml
@@ -6,9 +6,8 @@ cache: pip
 install:
   - pip install -r test_requirements.txt
   - pip install -e .
-  - travis_wait 60 mvn install
 script: 
-  - pytest
+  - travis_wait 40 pytest
 branches:
   only:
     - master
