--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ install:
   - pip install -r test_requirements.txt
   - pip install -e .
 script: 
-  - travis_wait 40 pytest
+  - pytest
 branches:
   only:
     - master
