--- a/pytest.ini
+++ b/pytest.ini
@@ -1,3 +1,3 @@
 [pytest]
-addopts = --ignore setup.py --doctest-modules --ignore=docs/long_tests/
+addopts = --ignore setup.py --doctest-modules --ignore=docs/plot_diffprefs_prior.py
 # ignore script to create docs plot, requires `LaTeX`
