--- a/pytest.ini
+++ b/pytest.ini
@@ -1,3 +1,3 @@
 [pytest]
-addopts = --ignore setup.py --doctest-modules --ignore=docs/plot_diffprefs_prior.py
+addopts = --ignore setup.py --doctest-modules --ignore=docs/plot_diffprefs_prior.py,tests/long_tests/,tests/test_underflow.py
 # ignore script to create docs plot, requires `LaTeX`
