--- a/pytest.ini
+++ b/pytest.ini
@@ -1,3 +1,3 @@
 [pytest]
-addopts = --ignore setup.py --doctest-modules --ignore=docs/plot_diffprefs_prior.py --ignore=tests/long_tests/ --ignore=tests/test_underflow.py
+addopts = --ignore setup.py --doctest-modules --ignore=docs/plot_diffprefs_prior.py --ignore=tests/long_tests/ --ignore=tests/test_underflow.py --ignore=tests/test_phydms_logoplot.py --ignore=tests/test_prepalignment.py
 # ignore script to create docs plot, requires `LaTeX`
