--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,7 @@ cache: pip
 install:
   - pip install -r test_requirements.txt
   - pip install -e .
+  - travis_wait 30 mvn install 
 
 script: 
   - pytest
