--- a/pytest.ini
+++ b/pytest.ini
@@ -1,3 +1,3 @@
 [pytest]
-addopts = --ignore setup.py --doctest-modules --ignore=docs/plot_diffprefs_prior.py --ignore=tests/test_diffprefsbysite.py --ignore=tests/test_prepalignment.py --ignore=tests/test_phydms_comprehensive.py
+addopts = --ignore setup.py --doctest-modules --ignore=docs/plot_diffprefs_prior.py --ignore=tests/test_diffprefsbysite.py --ignore=tests/test_prepalignment.py
 # ignore script to create docs plot, requires `LaTeX`
