--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,12 @@ install:
   - pip install -r test_requirements.txt
   - pip install -e .
 
+# following here: https://stackoverflow.com/a/35403128
+before_script: # configure a headless display to test plot generation
+  - "export DISPLAY=:99.0"
+  - "sh -e /etc/init.d/xvfb start"
+  - sleep 3 # give xvfb some time to start
+
 script:
   - pytest
 
