--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,7 @@ before_install:
   - sudo apt-get install raxml
 
 install:
+  - pip install -r test_requirements.txt
   - pip install -e .
 
 # following here: https://docs.travis-ci.com/user/gui-and-headless-browsers/#using-xvfb-to-run-tests-that-require-a-gui
